Code Generator/parser.output
Terminals unused in grammar

    TOKEN_ERROR


Grammar

    0 $accept: program $end

    1 program: stmt_list

    2 stmt_list: stmt_list stmt
    3          | stmt

    4 stmt: decl
    5     | TOKEN_IDENT TOKEN_ASSIGN expr TOKEN_SEMICOLON
    6     | TOKEN_MATRIX TOKEN_LBRACKET expr TOKEN_RBRACKET TOKEN_LBRACKET expr TOKEN_RBRACKET TOKEN_ASSIGN expr TOKEN_SEMICOLON
    7     | TOKEN_PRINT expr TOKEN_SEMICOLON
    8     | block

    9 decl: type TOKEN_IDENT TOKEN_ASSIGN expr TOKEN_SEMICOLON
   10     | type TOKEN_IDENT TOKEN_LPAREN param_list_opt TOKEN_RPAREN block

   11 param_list_opt: param_list
   12               | %empty

   13 param_list: param
   14           | param TOKEN_COMMA param_list

   15 param: type TOKEN_IDENT

   16 block: TOKEN_LBRACE stmt_list TOKEN_RBRACE

   17 expr: expr TOKEN_PLUS term
   18     | expr TOKEN_MINUS term
   19     | term

   20 term: term TOKEN_MUL factor
   21     | term TOKEN_DIV factor
   22     | factor

   23 factor: TOKEN_NUMBER
   24       | TOKEN_FLOAT_NUMBER
   25       | TOKEN_IDENT
   26       | TOKEN_MATRIX TOKEN_LBRACKET expr TOKEN_RBRACKET TOKEN_LBRACKET expr TOKEN_RBRACKET
   27       | TOKEN_LPAREN expr TOKEN_RPAREN

   28 type: TOKEN_INT
   29     | TOKEN_FLOAT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOKEN_INT (258) 28
    TOKEN_FLOAT (259) 29
    TOKEN_PRINT (260) 7
    TOKEN_MATRIX (261) 6 26
    TOKEN_ERROR (262)
    TOKEN_PLUS (263) 17
    TOKEN_MINUS (264) 18
    TOKEN_MUL (265) 20
    TOKEN_DIV (266) 21
    TOKEN_ASSIGN (267) 5 6 9
    TOKEN_SEMICOLON (268) 5 6 7 9
    TOKEN_LPAREN (269) 10 27
    TOKEN_RPAREN (270) 10 27
    TOKEN_LBRACE (271) 16
    TOKEN_RBRACE (272) 16
    TOKEN_LBRACKET (273) 6 26
    TOKEN_RBRACKET (274) 6 26
    TOKEN_COMMA (275) 14
    TOKEN_NUMBER <fvalue> (276) 23
    TOKEN_FLOAT_NUMBER <fvalue> (277) 24
    TOKEN_IDENT <name> (278) 5 9 10 15 25


Nonterminals, with rules where they appear

    $accept (24)
        on left: 0
    program <stmt> (25)
        on left: 1
        on right: 0
    stmt_list <stmt> (26)
        on left: 2 3
        on right: 1 2 16
    stmt <stmt> (27)
        on left: 4 5 6 7 8
        on right: 2 3
    decl <decl> (28)
        on left: 9 10
        on right: 4
    param_list_opt <param> (29)
        on left: 11 12
        on right: 10
    param_list <param> (30)
        on left: 13 14
        on right: 11 14
    param <param> (31)
        on left: 15
        on right: 13 14
    block <stmt> (32)
        on left: 16
        on right: 8 10
    expr <expr> (33)
        on left: 17 18 19
        on right: 5 6 7 9 17 18 26 27
    term <expr> (34)
        on left: 20 21 22
        on right: 17 18 19 20 21
    factor <expr> (35)
        on left: 23 24 25 26 27
        on right: 20 21 22
    type <type> (36)
        on left: 28 29
        on right: 9 10 15


State 0

    0 $accept: • program $end

    TOKEN_INT     shift, and go to state 1
    TOKEN_FLOAT   shift, and go to state 2
    TOKEN_PRINT   shift, and go to state 3
    TOKEN_MATRIX  shift, and go to state 4
    TOKEN_LBRACE  shift, and go to state 5
    TOKEN_IDENT   shift, and go to state 6

    program    go to state 7
    stmt_list  go to state 8
    stmt       go to state 9
    decl       go to state 10
    block      go to state 11
    type       go to state 12


State 1

   28 type: TOKEN_INT •

    $default  reduce using rule 28 (type)


State 2

   29 type: TOKEN_FLOAT •

    $default  reduce using rule 29 (type)


State 3

    7 stmt: TOKEN_PRINT • expr TOKEN_SEMICOLON

    TOKEN_MATRIX        shift, and go to state 13
    TOKEN_LPAREN        shift, and go to state 14
    TOKEN_NUMBER        shift, and go to state 15
    TOKEN_FLOAT_NUMBER  shift, and go to state 16
    TOKEN_IDENT         shift, and go to state 17

    expr    go to state 18
    term    go to state 19
    factor  go to state 20


State 4

    6 stmt: TOKEN_MATRIX • TOKEN_LBRACKET expr TOKEN_RBRACKET TOKEN_LBRACKET expr TOKEN_RBRACKET TOKEN_ASSIGN expr TOKEN_SEMICOLON

    TOKEN_LBRACKET  shift, and go to state 21


State 5

   16 block: TOKEN_LBRACE • stmt_list TOKEN_RBRACE

    TOKEN_INT     shift, and go to state 1
    TOKEN_FLOAT   shift, and go to state 2
    TOKEN_PRINT   shift, and go to state 3
    TOKEN_MATRIX  shift, and go to state 4
    TOKEN_LBRACE  shift, and go to state 5
    TOKEN_IDENT   shift, and go to state 6

    stmt_list  go to state 22
    stmt       go to state 9
    decl       go to state 10
    block      go to state 11
    type       go to state 12


State 6

    5 stmt: TOKEN_IDENT • TOKEN_ASSIGN expr TOKEN_SEMICOLON

    TOKEN_ASSIGN  shift, and go to state 23


State 7

    0 $accept: program • $end

    $end  shift, and go to state 24


State 8

    1 program: stmt_list •
    2 stmt_list: stmt_list • stmt

    TOKEN_INT     shift, and go to state 1
    TOKEN_FLOAT   shift, and go to state 2
    TOKEN_PRINT   shift, and go to state 3
    TOKEN_MATRIX  shift, and go to state 4
    TOKEN_LBRACE  shift, and go to state 5
    TOKEN_IDENT   shift, and go to state 6

    $default  reduce using rule 1 (program)

    stmt   go to state 25
    decl   go to state 10
    block  go to state 11
    type   go to state 12


State 9

    3 stmt_list: stmt •

    $default  reduce using rule 3 (stmt_list)


State 10

    4 stmt: decl •

    $default  reduce using rule 4 (stmt)


State 11

    8 stmt: block •

    $default  reduce using rule 8 (stmt)


State 12

    9 decl: type • TOKEN_IDENT TOKEN_ASSIGN expr TOKEN_SEMICOLON
   10     | type • TOKEN_IDENT TOKEN_LPAREN param_list_opt TOKEN_RPAREN block

    TOKEN_IDENT  shift, and go to state 26


State 13

   26 factor: TOKEN_MATRIX • TOKEN_LBRACKET expr TOKEN_RBRACKET TOKEN_LBRACKET expr TOKEN_RBRACKET

    TOKEN_LBRACKET  shift, and go to state 27


State 14

   27 factor: TOKEN_LPAREN • expr TOKEN_RPAREN

    TOKEN_MATRIX        shift, and go to state 13
    TOKEN_LPAREN        shift, and go to state 14
    TOKEN_NUMBER        shift, and go to state 15
    TOKEN_FLOAT_NUMBER  shift, and go to state 16
    TOKEN_IDENT         shift, and go to state 17

    expr    go to state 28
    term    go to state 19
    factor  go to state 20


State 15

   23 factor: TOKEN_NUMBER •

    $default  reduce using rule 23 (factor)


State 16

   24 factor: TOKEN_FLOAT_NUMBER •

    $default  reduce using rule 24 (factor)


State 17

   25 factor: TOKEN_IDENT •

    $default  reduce using rule 25 (factor)


State 18

    7 stmt: TOKEN_PRINT expr • TOKEN_SEMICOLON
   17 expr: expr • TOKEN_PLUS term
   18     | expr • TOKEN_MINUS term

    TOKEN_PLUS       shift, and go to state 29
    TOKEN_MINUS      shift, and go to state 30
    TOKEN_SEMICOLON  shift, and go to state 31


State 19

   19 expr: term •
   20 term: term • TOKEN_MUL factor
   21     | term • TOKEN_DIV factor

    TOKEN_MUL  shift, and go to state 32
    TOKEN_DIV  shift, and go to state 33

    $default  reduce using rule 19 (expr)


State 20

   22 term: factor •

    $default  reduce using rule 22 (term)


State 21

    6 stmt: TOKEN_MATRIX TOKEN_LBRACKET • expr TOKEN_RBRACKET TOKEN_LBRACKET expr TOKEN_RBRACKET TOKEN_ASSIGN expr TOKEN_SEMICOLON

    TOKEN_MATRIX        shift, and go to state 13
    TOKEN_LPAREN        shift, and go to state 14
    TOKEN_NUMBER        shift, and go to state 15
    TOKEN_FLOAT_NUMBER  shift, and go to state 16
    TOKEN_IDENT         shift, and go to state 17

    expr    go to state 34
    term    go to state 19
    factor  go to state 20


State 22

    2 stmt_list: stmt_list • stmt
   16 block: TOKEN_LBRACE stmt_list • TOKEN_RBRACE

    TOKEN_INT     shift, and go to state 1
    TOKEN_FLOAT   shift, and go to state 2
    TOKEN_PRINT   shift, and go to state 3
    TOKEN_MATRIX  shift, and go to state 4
    TOKEN_LBRACE  shift, and go to state 5
    TOKEN_RBRACE  shift, and go to state 35
    TOKEN_IDENT   shift, and go to state 6

    stmt   go to state 25
    decl   go to state 10
    block  go to state 11
    type   go to state 12


State 23

    5 stmt: TOKEN_IDENT TOKEN_ASSIGN • expr TOKEN_SEMICOLON

    TOKEN_MATRIX        shift, and go to state 13
    TOKEN_LPAREN        shift, and go to state 14
    TOKEN_NUMBER        shift, and go to state 15
    TOKEN_FLOAT_NUMBER  shift, and go to state 16
    TOKEN_IDENT         shift, and go to state 17

    expr    go to state 36
    term    go to state 19
    factor  go to state 20


State 24

    0 $accept: program $end •

    $default  accept


State 25

    2 stmt_list: stmt_list stmt •

    $default  reduce using rule 2 (stmt_list)


State 26

    9 decl: type TOKEN_IDENT • TOKEN_ASSIGN expr TOKEN_SEMICOLON
   10     | type TOKEN_IDENT • TOKEN_LPAREN param_list_opt TOKEN_RPAREN block

    TOKEN_ASSIGN  shift, and go to state 37
    TOKEN_LPAREN  shift, and go to state 38


State 27

   26 factor: TOKEN_MATRIX TOKEN_LBRACKET • expr TOKEN_RBRACKET TOKEN_LBRACKET expr TOKEN_RBRACKET

    TOKEN_MATRIX        shift, and go to state 13
    TOKEN_LPAREN        shift, and go to state 14
    TOKEN_NUMBER        shift, and go to state 15
    TOKEN_FLOAT_NUMBER  shift, and go to state 16
    TOKEN_IDENT         shift, and go to state 17

    expr    go to state 39
    term    go to state 19
    factor  go to state 20


State 28

   17 expr: expr • TOKEN_PLUS term
   18     | expr • TOKEN_MINUS term
   27 factor: TOKEN_LPAREN expr • TOKEN_RPAREN

    TOKEN_PLUS    shift, and go to state 29
    TOKEN_MINUS   shift, and go to state 30
    TOKEN_RPAREN  shift, and go to state 40


State 29

   17 expr: expr TOKEN_PLUS • term

    TOKEN_MATRIX        shift, and go to state 13
    TOKEN_LPAREN        shift, and go to state 14
    TOKEN_NUMBER        shift, and go to state 15
    TOKEN_FLOAT_NUMBER  shift, and go to state 16
    TOKEN_IDENT         shift, and go to state 17

    term    go to state 41
    factor  go to state 20


State 30

   18 expr: expr TOKEN_MINUS • term

    TOKEN_MATRIX        shift, and go to state 13
    TOKEN_LPAREN        shift, and go to state 14
    TOKEN_NUMBER        shift, and go to state 15
    TOKEN_FLOAT_NUMBER  shift, and go to state 16
    TOKEN_IDENT         shift, and go to state 17

    term    go to state 42
    factor  go to state 20


State 31

    7 stmt: TOKEN_PRINT expr TOKEN_SEMICOLON •

    $default  reduce using rule 7 (stmt)


State 32

   20 term: term TOKEN_MUL • factor

    TOKEN_MATRIX        shift, and go to state 13
    TOKEN_LPAREN        shift, and go to state 14
    TOKEN_NUMBER        shift, and go to state 15
    TOKEN_FLOAT_NUMBER  shift, and go to state 16
    TOKEN_IDENT         shift, and go to state 17

    factor  go to state 43


State 33

   21 term: term TOKEN_DIV • factor

    TOKEN_MATRIX        shift, and go to state 13
    TOKEN_LPAREN        shift, and go to state 14
    TOKEN_NUMBER        shift, and go to state 15
    TOKEN_FLOAT_NUMBER  shift, and go to state 16
    TOKEN_IDENT         shift, and go to state 17

    factor  go to state 44


State 34

    6 stmt: TOKEN_MATRIX TOKEN_LBRACKET expr • TOKEN_RBRACKET TOKEN_LBRACKET expr TOKEN_RBRACKET TOKEN_ASSIGN expr TOKEN_SEMICOLON
   17 expr: expr • TOKEN_PLUS term
   18     | expr • TOKEN_MINUS term

    TOKEN_PLUS      shift, and go to state 29
    TOKEN_MINUS     shift, and go to state 30
    TOKEN_RBRACKET  shift, and go to state 45


State 35

   16 block: TOKEN_LBRACE stmt_list TOKEN_RBRACE •

    $default  reduce using rule 16 (block)


State 36

    5 stmt: TOKEN_IDENT TOKEN_ASSIGN expr • TOKEN_SEMICOLON
   17 expr: expr • TOKEN_PLUS term
   18     | expr • TOKEN_MINUS term

    TOKEN_PLUS       shift, and go to state 29
    TOKEN_MINUS      shift, and go to state 30
    TOKEN_SEMICOLON  shift, and go to state 46


State 37

    9 decl: type TOKEN_IDENT TOKEN_ASSIGN • expr TOKEN_SEMICOLON

    TOKEN_MATRIX        shift, and go to state 13
    TOKEN_LPAREN        shift, and go to state 14
    TOKEN_NUMBER        shift, and go to state 15
    TOKEN_FLOAT_NUMBER  shift, and go to state 16
    TOKEN_IDENT         shift, and go to state 17

    expr    go to state 47
    term    go to state 19
    factor  go to state 20


State 38

   10 decl: type TOKEN_IDENT TOKEN_LPAREN • param_list_opt TOKEN_RPAREN block

    TOKEN_INT    shift, and go to state 1
    TOKEN_FLOAT  shift, and go to state 2

    $default  reduce using rule 12 (param_list_opt)

    param_list_opt  go to state 48
    param_list      go to state 49
    param           go to state 50
    type            go to state 51


State 39

   17 expr: expr • TOKEN_PLUS term
   18     | expr • TOKEN_MINUS term
   26 factor: TOKEN_MATRIX TOKEN_LBRACKET expr • TOKEN_RBRACKET TOKEN_LBRACKET expr TOKEN_RBRACKET

    TOKEN_PLUS      shift, and go to state 29
    TOKEN_MINUS     shift, and go to state 30
    TOKEN_RBRACKET  shift, and go to state 52


State 40

   27 factor: TOKEN_LPAREN expr TOKEN_RPAREN •

    $default  reduce using rule 27 (factor)


State 41

   17 expr: expr TOKEN_PLUS term •
   20 term: term • TOKEN_MUL factor
   21     | term • TOKEN_DIV factor

    TOKEN_MUL  shift, and go to state 32
    TOKEN_DIV  shift, and go to state 33

    $default  reduce using rule 17 (expr)


State 42

   18 expr: expr TOKEN_MINUS term •
   20 term: term • TOKEN_MUL factor
   21     | term • TOKEN_DIV factor

    TOKEN_MUL  shift, and go to state 32
    TOKEN_DIV  shift, and go to state 33

    $default  reduce using rule 18 (expr)


State 43

   20 term: term TOKEN_MUL factor •

    $default  reduce using rule 20 (term)


State 44

   21 term: term TOKEN_DIV factor •

    $default  reduce using rule 21 (term)


State 45

    6 stmt: TOKEN_MATRIX TOKEN_LBRACKET expr TOKEN_RBRACKET • TOKEN_LBRACKET expr TOKEN_RBRACKET TOKEN_ASSIGN expr TOKEN_SEMICOLON

    TOKEN_LBRACKET  shift, and go to state 53


State 46

    5 stmt: TOKEN_IDENT TOKEN_ASSIGN expr TOKEN_SEMICOLON •

    $default  reduce using rule 5 (stmt)


State 47

    9 decl: type TOKEN_IDENT TOKEN_ASSIGN expr • TOKEN_SEMICOLON
   17 expr: expr • TOKEN_PLUS term
   18     | expr • TOKEN_MINUS term

    TOKEN_PLUS       shift, and go to state 29
    TOKEN_MINUS      shift, and go to state 30
    TOKEN_SEMICOLON  shift, and go to state 54


State 48

   10 decl: type TOKEN_IDENT TOKEN_LPAREN param_list_opt • TOKEN_RPAREN block

    TOKEN_RPAREN  shift, and go to state 55


State 49

   11 param_list_opt: param_list •

    $default  reduce using rule 11 (param_list_opt)


State 50

   13 param_list: param •
   14           | param • TOKEN_COMMA param_list

    TOKEN_COMMA  shift, and go to state 56

    $default  reduce using rule 13 (param_list)


State 51

   15 param: type • TOKEN_IDENT

    TOKEN_IDENT  shift, and go to state 57


State 52

   26 factor: TOKEN_MATRIX TOKEN_LBRACKET expr TOKEN_RBRACKET • TOKEN_LBRACKET expr TOKEN_RBRACKET

    TOKEN_LBRACKET  shift, and go to state 58


State 53

    6 stmt: TOKEN_MATRIX TOKEN_LBRACKET expr TOKEN_RBRACKET TOKEN_LBRACKET • expr TOKEN_RBRACKET TOKEN_ASSIGN expr TOKEN_SEMICOLON

    TOKEN_MATRIX        shift, and go to state 13
    TOKEN_LPAREN        shift, and go to state 14
    TOKEN_NUMBER        shift, and go to state 15
    TOKEN_FLOAT_NUMBER  shift, and go to state 16
    TOKEN_IDENT         shift, and go to state 17

    expr    go to state 59
    term    go to state 19
    factor  go to state 20


State 54

    9 decl: type TOKEN_IDENT TOKEN_ASSIGN expr TOKEN_SEMICOLON •

    $default  reduce using rule 9 (decl)


State 55

   10 decl: type TOKEN_IDENT TOKEN_LPAREN param_list_opt TOKEN_RPAREN • block

    TOKEN_LBRACE  shift, and go to state 5

    block  go to state 60


State 56

   14 param_list: param TOKEN_COMMA • param_list

    TOKEN_INT    shift, and go to state 1
    TOKEN_FLOAT  shift, and go to state 2

    param_list  go to state 61
    param       go to state 50
    type        go to state 51


State 57

   15 param: type TOKEN_IDENT •

    $default  reduce using rule 15 (param)


State 58

   26 factor: TOKEN_MATRIX TOKEN_LBRACKET expr TOKEN_RBRACKET TOKEN_LBRACKET • expr TOKEN_RBRACKET

    TOKEN_MATRIX        shift, and go to state 13
    TOKEN_LPAREN        shift, and go to state 14
    TOKEN_NUMBER        shift, and go to state 15
    TOKEN_FLOAT_NUMBER  shift, and go to state 16
    TOKEN_IDENT         shift, and go to state 17

    expr    go to state 62
    term    go to state 19
    factor  go to state 20


State 59

    6 stmt: TOKEN_MATRIX TOKEN_LBRACKET expr TOKEN_RBRACKET TOKEN_LBRACKET expr • TOKEN_RBRACKET TOKEN_ASSIGN expr TOKEN_SEMICOLON
   17 expr: expr • TOKEN_PLUS term
   18     | expr • TOKEN_MINUS term

    TOKEN_PLUS      shift, and go to state 29
    TOKEN_MINUS     shift, and go to state 30
    TOKEN_RBRACKET  shift, and go to state 63


State 60

   10 decl: type TOKEN_IDENT TOKEN_LPAREN param_list_opt TOKEN_RPAREN block •

    $default  reduce using rule 10 (decl)


State 61

   14 param_list: param TOKEN_COMMA param_list •

    $default  reduce using rule 14 (param_list)


State 62

   17 expr: expr • TOKEN_PLUS term
   18     | expr • TOKEN_MINUS term
   26 factor: TOKEN_MATRIX TOKEN_LBRACKET expr TOKEN_RBRACKET TOKEN_LBRACKET expr • TOKEN_RBRACKET

    TOKEN_PLUS      shift, and go to state 29
    TOKEN_MINUS     shift, and go to state 30
    TOKEN_RBRACKET  shift, and go to state 64


State 63

    6 stmt: TOKEN_MATRIX TOKEN_LBRACKET expr TOKEN_RBRACKET TOKEN_LBRACKET expr TOKEN_RBRACKET • TOKEN_ASSIGN expr TOKEN_SEMICOLON

    TOKEN_ASSIGN  shift, and go to state 65


State 64

   26 factor: TOKEN_MATRIX TOKEN_LBRACKET expr TOKEN_RBRACKET TOKEN_LBRACKET expr TOKEN_RBRACKET •

    $default  reduce using rule 26 (factor)


State 65

    6 stmt: TOKEN_MATRIX TOKEN_LBRACKET expr TOKEN_RBRACKET TOKEN_LBRACKET expr TOKEN_RBRACKET TOKEN_ASSIGN • expr TOKEN_SEMICOLON

    TOKEN_MATRIX        shift, and go to state 13
    TOKEN_LPAREN        shift, and go to state 14
    TOKEN_NUMBER        shift, and go to state 15
    TOKEN_FLOAT_NUMBER  shift, and go to state 16
    TOKEN_IDENT         shift, and go to state 17

    expr    go to state 66
    term    go to state 19
    factor  go to state 20


State 66

    6 stmt: TOKEN_MATRIX TOKEN_LBRACKET expr TOKEN_RBRACKET TOKEN_LBRACKET expr TOKEN_RBRACKET TOKEN_ASSIGN expr • TOKEN_SEMICOLON
   17 expr: expr • TOKEN_PLUS term
   18     | expr • TOKEN_MINUS term

    TOKEN_PLUS       shift, and go to state 29
    TOKEN_MINUS      shift, and go to state 30
    TOKEN_SEMICOLON  shift, and go to state 67


State 67

    6 stmt: TOKEN_MATRIX TOKEN_LBRACKET expr TOKEN_RBRACKET TOKEN_LBRACKET expr TOKEN_RBRACKET TOKEN_ASSIGN expr TOKEN_SEMICOLON •

    $default  reduce using rule 6 (stmt)
